--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <title>xbelikov</title>
     <meta charset="utf-8">
-  </head>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
+    <script type="text/javascript" src="/bower_components/angular/angular.js"></script>
+  	<script type="text/javascript" src="/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+  	<script type="text/javascript" src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+
+  	<script type="text/javascript" src="/js/app.js"></script>
+  </head>   
   <body>
     <p>Уютный бложег на гитхабе
     </p>
