--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE Html>
-<html>
-  <head>
-    <title>xbelikov</title>
-    <meta charset="utf-8">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
-    <script type="text/javascript" src="/bower_components/angular/angular.js"></script>
-  	<script type="text/javascript" src="/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
-  	<script type="text/javascript" src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+<html ng-app>
+	<head>
+		<title>xbelikov</title>
+		<meta charset="utf-8">
+		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
+		<script type="text/javascript" src="bower_components/angular/angular.js"></script>
+		<script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+		<script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+	</head>   
+	<body>
+		<p>Уютный бложег на гитхабе</p>
 
-  	<script type="text/javascript" src="/js/app.js"></script>
-  </head>   
-  <body>
-    <p>Уютный бложег на гитхабе
-    </p>
-  </body>
+1 + 2 = {{ 1 + 2 }}
+		<script type="text/javascript" src="js/app.js"></script>
+	</body>
 </html>
