--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	        	</div>
 		        <div id="navbar" class="collapse navbar-collapse">
 			        <ul class="nav navbar-nav">
-			            <li class="active"><a href="#">Редактор Webgl шейдеров</a></li>
+			            <!--li class="active"><a href="#">Редактор Webgl шейдеров</a></li-->
 			        </ul>
 		        </div><!--/.nav-collapse -->
 	      </div>
@@ -29,9 +29,9 @@
 
 	    <div class="container">
 
-	      <div>
+	      <!--div>
 	        <h1>Редактор Webgl шейдеров</h1>
-	      </div>
+	      </div-->
 
 	    </div><!-- /.container -->
 
